image work completed

--- a/.env
+++ b/.env
@@ -2,6 +2,6 @@ MONGO_URI=mongodb+srv://anusraza268:TOIR06Pf7Pz3cX9m@backend.upsac.mongodb.net/c
 PORT=3000
 ACCESS_JWT_TOkEN_SECRET="5353453"
 REFRESH_JWT_TOKEN_SECRET="FDSKJLF"
-# CLOUD_CLOUD_NAME='dvryhevqf'
-# CLOUD_API_KEY='499764812538244'
-# CLOUD_API_SECRET="dZxyLgZPj9lWcMfajM6gTAGjGTc"
+CLOUD_CLOUD_NAME='dvryhevqf'
+CLOUD_API_KEY='499764812538244'
+CLOUD_API_SECRET="dZxyLgZPj9lWcMfajM6gTAGjGTc"
