--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
-MONGO_URI=mongodb+srv://anusraza268:TOIR06Pf7Pz3cX9m@backend.upsac.mongodb.net/comment?retryWrites=true&w=majority
-PORT=3000
+# MONGO_URI="mongodb+srv://anusraza268:TOIR06Pf7Pz3cX9m@backend.upsac.mongodb.net/comment?retryWrites=true&w=majority"
+PORT=4000
 ACCESS_JWT_TOkEN_SECRET="5353453"
 REFRESH_JWT_TOKEN_SECRET="FDSKJLF"
 CLOUD_CLOUD_NAME='dvryhevqf'
 CLOUD_API_KEY='499764812538244'
 CLOUD_API_SECRET="dZxyLgZPj9lWcMfajM6gTAGjGTc"
+MONGO_URI=mongodb+srv://anusraza268:TOIR06Pf7Pz3cX9m@backend.upsac.mongodb.net/?retryWrites=true&w=majority&appName=comment
