--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@
 PORT=4000
 ACCESS_JWT_TOkEN_SECRET="5353453"
 REFRESH_JWT_TOKEN_SECRET="FDSKJLF"
+ENV=PROD
 CLOUD_CLOUD_NAME='dvryhevqf'
 CLOUD_API_KEY='499764812538244'
 CLOUD_API_SECRET="dZxyLgZPj9lWcMfajM6gTAGjGTc"
