--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,17 @@
 {
-    "version":2,
-    "builds":[{"src":"./index.js","use":"@vercel/node"}],
-    "routes":[{"src":"/(.*)","dest":"/"}]
+    "version": 2,
+    "builds": [
+        { "src": "./index.js", "use": "@vercel/node" }
+    ],
+    "routes": [
+        {
+            "src": "/api/(.*)",
+            "headers": {
+                "Access-Control-Allow-Origin": "*",
+                "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
+                "Access-Control-Allow-Headers": "Origin, X-Requested-With, Content-Type, Accept, Authorization"
+            },
+            "dest": "/"
+        }
+    ]
 }
