--- a/.env
+++ b/.env
@@ -1,8 +1,10 @@
 
 MONGO_URI="mongodb+srv://anusraza268:TOIR06Pf7Pz3cX9m@backend.upsac.mongodb.net/comment?retryWrites=true&w=majority&appName=comment"
-ACCESS_JWT_TOkEN_SECRET="5353453"
+ACCESS_JWT_TOKEN_SECRET="5353453"   # ✅ Correct variable name
 REFRESH_JWT_TOKEN_SECRET="FDSKJLF"
-CLOUD_CLOUD_NAME='dvryhevqf'
-CLOUD_API_KEY='499764812538244'
+CLOUD_CLOUD_NAME="dvryhevqf"
+CLOUD_API_KEY="499764812538244"
 CLOUD_API_SECRET="dZxyLgZPj9lWcMfajM6gTAGjGTc"
-ENV=PROD
+ENV="PROD"
+
+
