--- a/.env
+++ b/.env
@@ -6,5 +6,6 @@ CLOUD_CLOUD_NAME="dvryhevqf"
 CLOUD_API_KEY="499764812538244"
 CLOUD_API_SECRET="dZxyLgZPj9lWcMfajM6gTAGjGTc"
 ENV="PROD"
+PORT=5000
 
 
